--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,54 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* margin: 0; */
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-header{
-  align-items: right;
-  gap: 20px;
-  
+main {
+    padding: 2em;
+    margin: auto;
+    ;
 }
-svg{
-  color: black;
-  height: 2em;
-  width: 200px;
+
+.dev {
+    color: blueviolet;
+}
+
+header {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    gap: 20px;
+    margin-right: 2em;
+    padding-top: 1em;
+}
+
+p {
+    color: black;
+    font-size: 20px;
+}
+
+.button-link {
+    color: black;
+    /* display: flex; */
+    width: 100px;
+    height: 40px;
+    border-radius: 8px;
+    align-items: center;
+}
+
+svg {
+    width: 30px;
+    height: 30px;
+    color: blue;
+}
+
+footer{
+    text-align: center;
+    padding: 1em;
+    margin-top: 2em;
+    text-wrap: balance;
 }
