--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,31 @@
     text-decoration: none;
     list-style: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: small;
 }
 
 main {
     padding: 2em;
     margin: auto;
-    ;
+    background-color: color-mix(in srgb, color percentage, color percentage);
+    background-color: snow;
 }
 
 .dev {
     color: blueviolet;
+    font-size: larger;
 }
 
 header {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    gap: 20px;
+    margin-left: 2em;
+    padding-top: 1em;
+}
+
+nav {
     display: flex;
     justify-content: right;
     align-items: right;
@@ -33,7 +45,6 @@ p {
 
 .button-link {
     color: black;
-    /* display: flex; */
     width: 100px;
     height: 40px;
     border-radius: 8px;
@@ -41,14 +52,69 @@ p {
 }
 
 svg {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     color: blue;
 }
 
-footer{
+footer {
     text-align: center;
     padding: 1em;
     margin-top: 2em;
     text-wrap: balance;
+}
+
+.flexdiv {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.btn {
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    background-color: whitesmoke;
+    padding: 0.5em;
+    border-radius: 6px;
+    font-weight: 600;
+    color: black;
+}
+
+.span1 {
+    display: flex;
+
+}
+
+main {
+    width: 50%;
+    float: none;
+    padding: 20px;
+}
+
+#tm {
+    color: black;
+    font: caption;
+}
+
+h1 {
+    text-shadow: 2px 2px 5px blue;
+}
+
+.aside1 {
+    font-size: large;
+    width: 25%;
+    /* background-color: blanchedalmond; */
+    padding: 20px;
+    float: right;
+}
+
+.aside2 {
+    font-size: large;
+    width: 25%;
+    /* background-color: blanchedalmond ; */
+    padding: 20px;
+    float: left;
 }
